Bug Fix: Auto Desktop Capture Not Faithful To The Flag

When setting flag --auto-select-desktop-capture-source="<some source name>", the expected behavior is to automatically share the source with given name.
But we observe, it shares the entire screen instead. 

This CL fixes the bug.

Bug: 731948
Change-Id: Id5da0de2aa90ae83bd65f091abc0c6c74b05fb8d
Reviewed-on: https://chromium-review.googlesource.com/556305
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Qiang Chen <qiangchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483781}
Former-commit-id: a45318049ffb398bb8af3309a8b5d9b6882baba3